--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,15 +3,18 @@
 // Variables for font families and colors
 $font-lato: 'Lato', sans-serif;
 $font-roboto-slab: 'Roboto Slab', serif;
-$color-primary: #1A568C;
+$font-roboto:'Roboto', sans-serif;
+$color-primary: #004E9A;
 $color-white: #ffffff;
 $color-grey: #575B5E;
 $color-light-grey: #E8E8E8;
 $color-blue: #00568A;
+$color-shadow: #262261;
 
 // Import Google Fonts
 @import url(//fonts.googleapis.com/css?family=Lato:300,400,700,900);
 @import url(//fonts.googleapis.com/css?family=Roboto+Slab:300,400,700);
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 *, :after, :before {
   box-sizing: inherit !important;
@@ -46,9 +49,13 @@ header {
   padding-bottom: 15px;
 }
 
+.index-main{
+    background:$color-primary;
+
+}
+
 .index-header {
-  background:#004E9A;
-  background-size: cover;
+  
   min-height: 768px;
   background-position: center;
 }
@@ -63,6 +70,9 @@ header {
 .logo-image {
   width: 194px;
   height: auto;
+  position: fixed;
+  right:50px;
+  bottom: 50px;
 }
 
 .content-logo {
@@ -145,28 +155,32 @@ header {
   }
 }
 
-.CTA-container {
-  width: 100%;
-  display: flex;
-  align-items: center;
-}
 
 .CTA {
-  background-color: $color-primary;
-  font-family: $font-lato;
+  background-color: white;
+  font-family: $font-roboto;
   font-size: 25px;
-  color: $color-white !important;
+  color: $color-primary !important;
   text-transform: uppercase;
-  padding: 20px 60px;
+  padding: 15px 60px;
   border-radius: 60px;
   margin: 0 auto;
   text-decoration: none !important;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
+  font-weight: 500;
+  font-style: italic;
+  box-shadow: 10px 10px 0 $color-shadow; 
+	-webkit-box-shadow: 10px 10px 0 $color-shadow; 
+	-moz-box-shadow: 10px 10px 0 $color-shadow; 
 
   &:hover {
     background-color: darken($color-primary, 20%);
+    color:white !important;
+      box-shadow: 5px 5px 0 $color-shadow; 
+	-webkit-box-shadow: 5px 5px 0 $color-shadow; 
+	-moz-box-shadow: 5px 5px 0 $color-shadow; 
   }
 }
 
@@ -362,7 +376,9 @@ header {
 
 h1 {
   display: block;
-  font-family: $font-lato;
+  font-family: $font-roboto;
+  font-weight: 900;
+  font-style: italic;
   color: $color-white;
   font-size: 48px;
   width: 100%;
@@ -621,4 +637,22 @@ footer {
 .pdf-card-text {
   text-align: left;
   padding-left: 10px;
+}
+
+
+//bg-logo
+.bg-logo{
+    position: absolute;
+    height: 80%;
+}
+.index-content{
+    text-align: left;
+
+    p{
+        width: 60%;
+         text-align: left;
+         color: white;
+         font-weight: normal;
+         font-size: 18px;
+    }
 }
