--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,13 +52,13 @@ header {
 .index-main{
     background:$color-primary;
 
+   header {
+      width: 100%;
+      height: 100%;
+    }
+
 }
 
-.index-header {
-  
-  min-height: 768px;
-  background-position: center;
-}
 
 .content-header {
   background-image: url("../image/content-header.png");
@@ -70,7 +70,7 @@ header {
 .logo-image {
   width: 194px;
   height: auto;
-  position: fixed;
+  position: absolute;
   right:50px;
   bottom: 50px;
 }
